--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
+  "scripts": {
+    "server": "nodemon index.js"
+  },
   "dependencies": {
-    "brcypt": "^1.0.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "knex": "^0.19.2",
     "sqlite3": "^4.1.0"
